# southy

./: .gitignore  Dockerfile  Makefile  README.md  __init__.py  docker-compose.yml  pyproject.toml
docs/: conf.py  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/.doctrees/: environment.pickle
docs/.doctrees/collect/: Hash.doctree  diff.doctree  get_all_hash.doctree  index.doctree  local_repository.doctree
docs/.doctrees/utils/: clone_project.doctree  command.doctree  delete_folder.doctree  dir_deleter.doctree  index.doctree  project_cloner.doctree  workspace.doctree
docs/_modules/: index.html
docs/_modules/collect/: Hash.html  diff.html  get_all_hash.html
docs/_modules/utils/: clone_project.html  command.html  delete_folder.html  dir_deleter.html  project_cloner.html
docs/_sources/collect/: Hash.rst.txt  index.rst.txt  local_repository.rst.txt
docs/_sources/utils/: dir_deleter.rst.txt  index.rst.txt  project_cloner.rst.txt  workspace.rst.txt
docs/collect/: Hash.html  diff.html  get_all_hash.html  get_all_hash.rst  index.html  local_repository.html
docs/utils/: clone_project.html  clone_project.rst  command.html  delete_folder.html  delete_folder.rst  dir_deleter.html  index.html  project_cloner.html  workspace.html
southy/: Dockerfile  __init__.py  main.py  pyproject.toml
southy/collect/: GetHash.py  Hash.py  __init__.py  diff.py  get_all_hash.py  get_diff.py  local_repository.py
southy/constant/: path.py
southy/constants/: path.py
southy/utils/: __init__.py  clone_project.py  command.py  delete_folder.py  dir_deleter.py  project_cloner.py  workspace.py
sphinx/: Makefile  conf.py  index.rst
sphinx/collect/: diff.rst
sphinx/docs/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
sphinx/docs/.doctrees/: environment.pickle  index.doctree
sphinx/docs/collect/: index.html  local_repository.html
sphinx/docs/utils/: command.html  (+2 more)
sphinx/utils/: command.rst  delete_folder.rst  index.rst
src/: pyproject.toml
test/: test_clone_project.py  test_collect.py  test_delete_folder.py  test_get_all_hash.py  test_get_diff.py  test_get_hash.py  test_utils.py
(+11 files in other folders)
