[tool.poetry]
name = "southy"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    {include = 'southy'}
]

[tool.poetry.dependencies]
python = "^3.12"
sphinx = "^7.2.6"
pylint = "^3.0.3"
sphinxcontrib-napoleon = "^0.7"
sphinx-pdj-theme = "^0.4.0"
cloud-sptheme = "^1.10.1.post20200504175005"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
